# under-the-c-desktop

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Menu  Menu UML.docx  Menu.cpp  Menu.h  Menu_UI_Structure.md  README.md  cmake_install.cmake  enabled_functions.txt  main  main.cpp  weatherlite  ~$nu UML.docx
.github/workflows/: cmake.yml
include/: Menu.h
include/curl/: CMakeCache.txt  cmake_install.cmake  curl-target.cmake  install_manifest.txt  libcurl-target.cmake
include/curl/CMake/: cmake_uninstall.cmake
include/curl/lib/: cmake_install.cmake  libcurl.so.4.8.0
include/curl/src/: cmake_install.cmake
include/curl/tests/: cmake_install.cmake
include/curl/tests/data/: Makefile.inc.cmake  cmake_install.cmake
include/curl/tests/libtest/: Makefile.inc.cmake  cmake_install.cmake
include/curl/tests/server/: cmake_install.cmake
include/curl/tests/unit/: cmake_install.cmake
lib/googletest/a.git/: config  index  packed-refs
lib/googletest/a.git/logs/refs/remotes/origin/: HEAD
lib/googletest/a.git/objects/pack/: pack-e238f3c92e2a180b1f178b42487a46836d8e1601.idx
lib/googletest/a.git/refs/heads/: main
src/: CMakeLists.txt  HttpRequest.cpp  HttpRequest.h  Menu  Menu.cpp  Menu.h  main  main.cpp
tests/: tests.cpp
tst/: Menu-test.cpp
